<resources>
    <string name="app_name">itsdone</string>
    <string name="title_detail">Item Detail</string>
    <string name="create_account">Create Account</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>

    <!-- Add Course Fragment hints -->
    <string name="enter_job_title_hint">Enter Job Title</string>
    <string name="enter_job_short_desc_hint">Enter Job Description</string>
    <string name="enter_job_long_desc_hint">Enter More Job Details</string>
    <string name="enter_job_location_hint">Enter Job Location</string>
    <string name="enter_job_price_hint">Enter Job Price</string>


    <string name="btn_add_job">Add Job</string>
    <string name="btn_cancel_job">Cancel Job</string>

    <!-- Create Account hints -->
    <string name="enter_username">username</string>
    <string name="enter_password">password</string>
    <string name="enter_first_name">first name</string>
    <string name="enter_last_name">last name</string>
    <string name="enter_email">email</string>
    <string name="reputation"> reputation </string>

    <!-- SharedPref keys -->
    <string name="signed_in">signed in</string>
    <string name="username">username</string>
    <string name="memberID">memberID</string>

</resources>
