<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:drawableLeft="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_action_person"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="322dp"
        android:layout_height="583dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/itsDone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        app:cardBackgroundColor="@color/gradientbackground2"
        app:cardCornerRadius="25dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clear"
                android:onClick="loginCheck"
                android:text="@string/button_login" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        app:cardBackgroundColor="@color/gradientbackground2"
        app:cardCornerRadius="25dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="createAccount"
                android:text="@string/create_account"
                android:background="@color/clear"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>